kanc/src/tests/skin_e2e_dry_run/should_fail/mod.rs
use super::*;

mod simplify_ast;
mod type_check;
